
Jukka:
	* New random distribution functions (mostly integrated from the 
	  GNU Scientific Library with some minor modifications):
	  RANDGAUSSIANTAIL(), and RANDLANDAU().
	* New random distributions for the random number generation tool:
	  Gaussian Tail, Landau, and Uniform integer.
	* New financial functions (integrated from the OpenOffice with
	  some modifications and clean up):
	  VDB().
	* New statistical functions (integrated from the R 1.5.1):
	  GEOMDIST().

--------------------------------------------------------------------------
Gnumeric 1.1.6

Andreas:
	* Fix and improve html import.
	* Make the analysis tools honour the lock state of cells.
	* Properly handle output range preparation for analysis tools
	  even if the user did not want it cleared. 
	* Create ui to set protection of indiviual sheets.
	* Make various edit actions check for locks first.
	* Fix 85383, 84396, 88164.

Jody:
	* Have the stf dialog use the default font.
	* Use GsfInput for importing.
	* Improve the Applix importer.
	* Fix lifecycle for 3d references.
	* Fix goto dialog's handling of invalid addresses.
	* forward port missing patches from 1.0
	* Finally add SheetView
	* Move animated cursor selection to sheetview
	* Handle enabling paste special on an application level
	* Move selection to SheetView
	* Parse and evaluate constructed references, no depends yet.
	* Read edit_pos from xls for multi-selection case.
	* Save selection correctly for xls.
	* Move freeze state to SheetView.
	* Decrease dependence on gal in favour of libgsf.
	* Move libgsf for XL export
	* Remove dependence on libole2 !
	* Add a Quattro Pro importer
	* Fix Lotus import of relative references, and formulas with strings
	* Support url, and in workbook hyper-links, no UI or persistence yet.
	* Import url, and in workbook hyper-links from xls
	* Take steps towards support implicit iteration for function args.
	* Handle cursor changes, and tooltips for hyper-links.

Jukka:
	* More solver enhancements: