@@ -14,6 +14,7 @@
 				<function name="avedev"/>
 				<function name="average"/>
 				<function name="averagea"/>
+				<function name="bernoulli"/>
 				<function name="betadist"/>
 				<function name="betainv"/>
 				<function name="binomdist"/>
